--- a/presets/package.xml
+++ b/presets/package.xml
@@ -41,12 +41,13 @@
    <file role="doc" name="LICENSE"/>
    <file role="doc" name="README.md"/>
    <file role="doc" name="THANKS"/>
+   <file role="doc" name="TODO"/>
    <file role="src" name="config.m4"/>
    <file role="src" name="Makefile.frag"/>
    <file role="src" name="php_<?=$PECL?>.h"/>
    <dir name="src">
     <file role="src" name="php_<?=$PECL?>_api.h"/>
-    <file role="src" name="php_<?=$PECL?>.c"/>
+    <file role="src" name="php_<?=$PECL?>_api.c"/>
    </dir>
    <dir name="tests">
    </dir>
